tests/invalid/wrong_proc_call.lang
module main

func add(a i32, b i32) -> i32;

func main() {
    add(1, c"");
}
